# meta_homologous_gene_annot

./: .gitignore  LICENSE  README.md  environment.yml  meta_homologous_gene_annot.py  pyproject.toml  requirements.txt
tests/: test_meta_homologous_gene_annot.py
