[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-homologous-gene-annot"
version = "1.1.0"
description = "Protein-guided annotation and gene-reference export for metagenomic assemblies"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Yanpeng Chen" },
]
dependencies = [
  "rich>=13.0",
  "rich-argparse>=1.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/ypchan/meta_homologous_gene_annot"
Repository = "https://github.com/ypchan/meta_homologous_gene_annot"
Issues = "https://github.com/ypchan/meta_homologous_gene_annot/issues"

[project.scripts]
meta-homologous-gene-annot = "meta_homologous_gene_annot:main"

[tool.setuptools]
py-modules = ["meta_homologous_gene_annot"]
